samples/_failures_safe/1761147946_ff7808_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87dd8c71.c: In function ‘main’:
./samples/SAFE/__tmp_87dd8c71.c:167:5: error: expected expression at end of input
  167 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_87dd8c71.c:167:5: error: expected declaration or statement at end of input
